[metadata]
name = project-name
version = attr: project_name.__version__
author = gorandp
author_email = gorandp@outlook.com
description = Project description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gorandp/project_name
project_urls =
    Bug Tracker = https://github.com/gorandp/project_name/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir = = src
python_requires = >= 3.6
# install_requires =
#     python-dotenv

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
#     myscript = project_name.cli:main

[tool:pytest]
testpaths = tests
